--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,12 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx1G
 org.gradle.warning.mode=all
 # Check these on https://fabricmc.net/develop/
-minecraft_version=1.19
-yarn_mappings=1.19+build.4
-loader_version=0.14.8
-# Fabric API
-fabric_version=0.56.0+1.19
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.4
+loader_version=0.14.10
+
+#Fabric api
+fabric_version=0.59.1+1.18.2
 loomVersion=0.11-SNAPSHOT
 # Mod Properties
 modVersion=1.0.5
